--- a/contact_us.html
+++ b/contact_us.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Contact Us </title>
+	<title> Contact Us</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<style type="text/css">
@@ -14,28 +14,30 @@
 <body>
 	<div class="container_4">
 		<div class="header">
-		<img src="img/header-01.jpg" style="width: 100%; height: 500px;">
+			<img src="img/header-01.jpg" style="width: 100%; height: 500px;">
 
-		<div class="abcd_bannername">
-		<h1> SHELF</h1>
-		<h3>Your Online Bookstore</h3>
-		</div>
+			<div class="abcd_bannername">
+			<h1> SHELF</h1>
+			<h3>Your Online Bookstore</h3>
+			</div>
 
-		<div class="nav">
-			<ul>
-				<li><a class="active" href="index.html">Home</a></li>
-				<li><a href="preview.html">Catalogs</a></li>
-				<li><a href="#!">Awards</a></li>
-				<li><a href="our_team.html">Our Team</a></li>
-				<li><a href="contact_us.html">Contact Us</a></li>
-			</ul>
-		</div>
+			<div class="nav">
+				<ul>
+					<li><a class="active" href="index.html">Home</a></li>
+					<li><a href="preview.html">Catalogs</a></li>
+					<li><a href="#!">Awards</a></li>
+					<li><a href="our_team.html">Our Team</a></li>
+					<li><a href="contact_us.html">Contact Us</a></li>
+				</ul>
+			</div>
 		</div>
 
 		<div class="hrr"></div>
 
+		<h2>Contact Us</h2>
+
 		<div class="form_section">
-			<h1>Contact Us</h1>
+			
 
 			<div class="form_1">
 				<form>
@@ -61,24 +63,31 @@
 			</div>
 		</div>
 
-		<div class="divv"> <p>Our Location </p></div>
+		<h2>Our Location</h2>
 
-		<!-- <div class="rect_grey">
-			<div class="right">
-			<h2>Need Help?</h2>
-			<p>Curabitur magna tellus, condimentum vitae consectetur id, elementum sit amet erat. Phasellus arcu leo, sagittis fringilla nisi et, pulvinar vestibulum mi. Maecenas mollis ullamcorper est at dignissim.</p>
+
+		<div class="main">
 			
-			<div class="abc"><div class="btn"> <h3>Live Chat</h3> </div></div>
+			<div class="rect_grey">
+				<p>Oops! Something went wrong. <br>
+				This page didn't load Google Maps correctly. See the JavaScript console for technical details.</p>
+				
+			</div>
+
+			<div class="rect_4">
+				<div class="right">
+				<h3>Need Help?</h3>
+				<p>Curabitur magna tellus, condimentum vitae consectetur id, elementum sit amet erat. Phasellus arcu leo, sagittis fringilla nisi et, pulvinar vestibulum mi. Maecenas mollis ullamcorper est at dignissim.</p>
+				
+				<div class="abc"><div class="btn"> <h3>Live Chat</h3> </div></div>
+
+			</div>
 		</div>
-
-		<div class="rect_a">
-			<div class="right">
-			<h2>Need Help?</h2>
-			<p>Curabitur magna tellus, condimentum vitae consectetur id, elementum sit amet erat. Phasellus arcu leo, sagittis fringilla nisi et, pulvinar vestibulum mi. Maecenas mollis ullamcorper est at dignissim.</p>
-			
-			<div class="abc"><div class="btn"> <h3>Live Chat</h3> </div></div>
-		</div> -->
-
 	</div>
+
+	<div class="footer_4">
+		<p>Copyright © 2019 Shelf Company - Designed by Tooplate</p>
+	</div>
+
 </body>
 </html>
