--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
 													<!-- fisrt row's caption here  -->
 
 			<div class="b1">
-				<div class="c1"> Nam vitae odio</div>
+				<div class="c1"> <a>Nam vitae odio</a></div>
 			</div>
 
 			<div class="b1">
-				<div class="c1">Integer ornare </div>
+				<div class="c1"><a>Integer ornare</a></div>
 			</div>
 
 			<div class="b1">
-				<div class="c1">Cras non augue</div>
+				<div class="c1"><a>Cras non augue</a></div>
 			</div>
 
 			<div class="b1">
-				<div class="c1">Dolor lacus</div>
+				<div class="c1"><a>Dolor lacus</a></div>
 			</div>
 
 													<!-- Second row of gallery	 -->
@@ -98,19 +98,19 @@
 													<!-- second row's caption here  -->
 
 			<div class="b1">
-				<div class="c1"> Nam vitae odio</div>
+				<div class="c1"><a>Nam vitae odio</a></div>
 			</div>
 
 			<div class="b1">
-				<div class="c1">Integer ornare </div>
+				<div class="c1"><a>Integer ornare</a></div>
 			</div>
 
 			<div class="b1">
-				<div class="c1">Cras non augue</div>
+				<div class="c1"><a>Cras non augue</a></div>
 			</div>
 
 			<div class="b1">
-				<div class="c1">Dolor lacus</div>
+				<div class="c1"><a>Dolor lacus</a></div>
 			</div>
 		</div>
 
